# openmate_RIM_ChatBot

./: .gitignore  README.md  app.py  column_definitions.json  main.py  prompts.py  pyproject.toml  sync_schema_from_db.py  txt2sql.py
